--- a/app/src/main/res/layout/dialog_newgame_invite.xml
+++ b/app/src/main/res/layout/dialog_newgame_invite.xml
@@ -4,16 +4,16 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 android:shrinkColumns="*"
 android:stretchColumns="1">
 	<TableRow>
-		<com.chess.genesis.view.RobotoText
+		<TextView
 		android:layout_gravity="right|center_vertical"
 		android:paddingRight="6dp"
 		android:textColor="#000000"
 		android:text="User Name:"/>
-		<com.chess.genesis.view.RobotoEditText
+		<EditText
 		android:id="@+id/opp_name"/>
 	</TableRow>
 	<TableRow>
-		<com.chess.genesis.view.RobotoText
+		<TextView
 		android:layout_gravity="right|center_vertical"
 		android:paddingRight="6dp"
 		android:textColor="#000000"
