--- a/app/src/main/res/layout/dialog_rename_game.xml
+++ b/app/src/main/res/layout/dialog_rename_game.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.chess.genesis.view.RobotoEditText
+<EditText
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/game_name_input"
 style="@style/FillWidth"
