--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android">
-	<com.chess.genesis.view.RobotoText
+	<TextView
 	android:id="@+id/username_header"
 	android:layout_alignParentLeft="true"
 	android:layout_marginTop="6dp"
 	android:layout_marginLeft="14dp"
 	android:textSize="14sp"
 	android:text="User Name"/>
-	<com.chess.genesis.view.RobotoEditText
+	<EditText
 	android:id="@+id/username"
 	style="@style/FillWidth"
 	android:layout_below="@id/username_header"
@@ -17,14 +17,14 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:inputType="textCapWords"
 	android:singleLine="true"
 	android:maxLength="16"/>
-	<com.chess.genesis.view.RobotoText
+	<TextView
 	android:id="@+id/password_header"
 	android:layout_below="@id/username"
 	android:layout_alignParentLeft="true"
 	android:layout_marginLeft="14dp"
 	android:textSize="14sp"
 	android:text="Password"/>
-	<com.chess.genesis.view.RobotoEditText
+	<EditText
 	android:id="@+id/password"
 	style="@style/FillWidth"
 	android:layout_below="@id/password_header"
