--- a/app/src/main/res/layout/fragment_mainmenu.xml
+++ b/app/src/main/res/layout/fragment_mainmenu.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:genesis="http://schemas.android.com/apk/res-auto">
-	<com.chess.genesis.view.RobotoText
+	<TextView
 	android:id="@+id/welcome"
 	android:paddingLeft="6dp"
 	android:paddingBottom="3dp"
@@ -18,7 +18,7 @@ xmlns:genesis="http://schemas.android.com/apk/res-auto">
 				android:id="@+id/local_game"
 				android:padding="12dp"
 				genesis:src="@drawable/main_local"/>
-				<com.chess.genesis.view.RobotoText
+				<TextView
 				android:id="@+id/local_game_txt"
 				android:layout_gravity="bottom|center_horizontal"
 				android:text="Local Play"/>
@@ -28,7 +28,7 @@ xmlns:genesis="http://schemas.android.com/apk/res-auto">
 				android:id="@+id/online_game"
 				android:padding="12dp"
 				genesis:src="@drawable/main_online"/>
-				<com.chess.genesis.view.RobotoText
+				<TextView
 				android:id="@+id/online_game_txt"
 				android:layout_gravity="bottom|center_horizontal"
 				android:text="Online Matches"/>
@@ -38,7 +38,7 @@ xmlns:genesis="http://schemas.android.com/apk/res-auto">
 				android:id="@+id/user_stats"
 				android:padding="12dp"
 				genesis:src="@drawable/main_stats"/>
-				<com.chess.genesis.view.RobotoText
+				<TextView
 				android:id="@+id/archive_game_txt"
 				android:layout_gravity="bottom|center_horizontal"
 				android:text="User Stats"/>
@@ -50,7 +50,7 @@ xmlns:genesis="http://schemas.android.com/apk/res-auto">
 				android:id="@+id/howtoplay"
 				android:padding="12dp"
 				genesis:src="@drawable/main_howto"/>
-				<com.chess.genesis.view.RobotoText
+				<TextView
 				android:id="@+id/howtoplay_txt"
 				android:layout_gravity="bottom|center_horizontal"
 				android:text="How To Play"/>
@@ -60,7 +60,7 @@ xmlns:genesis="http://schemas.android.com/apk/res-auto">
 				android:id="@+id/settings"
 				android:padding="12dp"
 				genesis:src="@drawable/main_settings"/>
-				<com.chess.genesis.view.RobotoText
+				<TextView
 				android:id="@+id/settings_txt"
 				android:layout_gravity="bottom|center_horizontal"
 				android:text="Settings"/>
@@ -70,7 +70,7 @@ xmlns:genesis="http://schemas.android.com/apk/res-auto">
 				android:id="@+id/feedback"
 				android:padding="12dp"
 				genesis:src="@drawable/main_feedback"/>
-				<com.chess.genesis.view.RobotoText
+				<TextView
 				android:id="@+id/feedback_txt"
 				android:layout_gravity="bottom|center_horizontal"
 				android:text="Submit Feedback"/>
@@ -82,7 +82,7 @@ xmlns:genesis="http://schemas.android.com/apk/res-auto">
 				android:id="@+id/login"
 				android:padding="12dp"
 				genesis:src="@drawable/main_login"/>
-				<com.chess.genesis.view.RobotoText
+				<TextView
 				android:id="@+id/login_txt"
 				android:layout_gravity="bottom|center_horizontal"
 				android:text="Login/Register"/>
@@ -103,7 +103,7 @@ xmlns:genesis="http://schemas.android.com/apk/res-auto">
 		android:padding="3dp"
 		android:src="@drawable/btn_googleplus"/>
 	</com.chess.genesis.view.ManualPanel>
-	<com.chess.genesis.view.RobotoText
+	<TextView
 	android:id="@+id/version"
 	android:layout_above="@id/layout01"
 	android:layout_alignParentRight="true"
