--- a/app/src/main/res/layout/msglist_cell.xml
+++ b/app/src/main/res/layout/msglist_cell.xml
@@ -4,20 +4,20 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<RelativeLayout
 	android:id="@+id/header"
 	android:background="#cce6ff">
-		<com.chess.genesis.view.RobotoText
+		<TextView
 		android:id="@+id/username"
 		android:layout_alignParentLeft="true"
 		android:paddingLeft="12dp"
 		android:textStyle="bold"
 		android:textSize="18sp"/>
-		<com.chess.genesis.view.RobotoText
+		<TextView
 		android:id="@+id/time"
 		android:layout_alignParentRight="true"
 		android:paddingRight="12dp"
 		android:textStyle="italic"
 		android:textSize="12sp"/>
 	</RelativeLayout>
-	<com.chess.genesis.view.RobotoText
+	<TextView
 	android:id="@+id/msg"
 	android:layout_below="@id/header"
 	android:paddingLeft="24dp"
