--- a/app/src/main/res/layout/msglist_cell_empty.xml
+++ b/app/src/main/res/layout/msglist_cell_empty.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android">
-	<com.chess.genesis.view.RobotoText
+	<TextView
 	android:id="@+id/nomsgs"
 	android:layout_centerInParent="true"
 	style="@style/FillWidth"
@@ -9,7 +9,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:textStyle="bold"
 	android:textSize="22sp"
 	android:text="No Messages"/>
-	<com.chess.genesis.view.RobotoText
+	<TextView
 	android:layout_centerHorizontal="true"
 	android:layout_below="@id/nomsgs"
 	android:text="Submit new messages below"
