--- a/app/src/main/res/layout/number_spinner.xml
+++ b/app/src/main/res/layout/number_spinner.xml
@@ -30,7 +30,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		<com.chess.genesis.view.MyImageView
 		android:src="@drawable/timepicker_input_selected"/>
 		
-		<com.chess.genesis.view.RobotoEditText
+		<EditText
 		android:id="@+id/timespinner_input"
 		android:gravity="center"
 		android:layout_gravity="center"
