--- a/app/src/main/res/layout/fragment_msgbox.xml
+++ b/app/src/main/res/layout/fragment_msgbox.xml
@@ -4,7 +4,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:panel="http://schemas.android.com/apk/res-auto">
 	<com.chess.genesis.view.TabText
 	android:id="@+id/tabtxt"
-	android:background="#ff383838"
+	android:background="@color/grey_900"
 	style="@style/FillWidth"
 	android:gravity="center"
 	android:padding="6dp"
