--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -21,7 +21,7 @@ android:orientation="vertical">
 	<ViewFlipper
 	style="@style/FillWidth"
 	android:id="@+id/board_flip">
-		<com.chess.genesis.view.BoardLayout
+		<com.chess.genesis.view.BoardView
 		android:layout_gravity="top|center_horizontal"
 		android:id="@+id/board_layout"/>
 		<com.chess.genesis.view.PlaceLayout
