--- a/app/src/main/res/layout/dialog_newgame_invite.xml
+++ b/app/src/main/res/layout/dialog_newgame_invite.xml
@@ -10,7 +10,8 @@ android:stretchColumns="1">
 		android:textColor="#000000"
 		android:text="User Name:"/>
 		<EditText
-		android:id="@+id/opp_name"/>
+		android:id="@+id/opp_name"
+		android:inputType="text" />
 	</TableRow>
 	<TableRow>
 		<TextView
