--- a/app/src/main/res/layout/dialog_cputime.xml
+++ b/app/src/main/res/layout/dialog_cputime.xml
@@ -10,7 +10,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:layout_below="@id/layout01"
 	android:layout_centerHorizontal="true"
 	android:shrinkColumns="*">
-		<com.chess.genesis.view.NumberSpinner
+		<NumberPicker
 		android:id="@+id/time"
 		android:layout_width="72dp"/>
 		<TextView
