--- a/app/src/main/res/layout/activity_game_online.xml
+++ b/app/src/main/res/layout/activity_game_online.xml
@@ -22,6 +22,7 @@ xmlns:panel="http://schemas.android.com/apk/res-auto">
 	<include
 	android:id="@+id/board_nav"
 	layout="@layout/include_board_nav"
-	style="@style/BlueBar"
+	android:layout_width="match_parent"
+	android:layout_height="50dp"
 	android:layout_alignParentBottom="true"/>
 </RelativeLayout>
