--- a/app/src/main/res/layout/activity_basephone.xml
+++ b/app/src/main/res/layout/activity_basephone.xml
@@ -10,6 +10,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:layout_above="@+id/botbar"/>
 	<include
 	layout="@layout/include_botbar"
-	style="@style/BlueBar"
+	android:layout_width="match_parent"
+	android:layout_height="50dp"
 	android:layout_alignParentBottom="true"/>
 </RelativeLayout>
