--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<style name="DefaultTheme" parent="@android:style/Theme.Light.NoTitleBar">
+	<style name="DefaultTheme" parent="android:Theme.DeviceDefault.Light.NoActionBar">
 		<item name="android:layout_width">wrap_content</item>
 		<item name="android:layout_height">wrap_content</item>
 	</style>
-	<style name="BlankDialog" parent="@android:style/Theme.Dialog">
+	<style name="BlankDialog" parent="android:Theme.DeviceDefault.Light.Dialog">
 		<item name="android:windowBackground">@android:color/transparent</item>
 		<item name="android:windowIsFloating">false</item>
 		<item name="android:windowNoTitle">true</item>
@@ -21,7 +21,7 @@
 		<item name="android:layout_width">match_parent</item>
 		<item name="android:layout_height">50dp</item>
 	</style>
-	<style name="NoDimDialog" parent="@android:style/Theme.Panel">
+	<style name="NoDimDialog" parent="android:Theme.DeviceDefault.Light.Panel">
 		<item name="android:backgroundDimAmount">0.0</item>
 		<item name="android:backgroundDimEnabled">false</item>
 		<item name="android:layout_width">wrap_content</item>
