--- a/app/src/main/res/layout/dialog_newgame_local.xml
+++ b/app/src/main/res/layout/dialog_newgame_local.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
+android:padding="16dp"
 android:shrinkColumns="*"
 android:stretchColumns="1">
 	<TableRow>
