--- a/app/src/main/res/layout/dialog_single_text.xml
+++ b/app/src/main/res/layout/dialog_single_text.xml
@@ -2,4 +2,5 @@
 <TextView
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/text"
+android:padding="16dp"
 android:textColor="#000000"/>
