--- a/app/src/main/res/layout/dialog_benchmark.xml
+++ b/app/src/main/res/layout/dialog_benchmark.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge
+<LinearLayout
+android:layout_height="wrap_content"
+android:layout_width="wrap_content"
+android:padding="12dp"
+android:orientation="vertical"
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<TextView
 	android:id="@+id/text01"
@@ -35,4 +39,4 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 			android:text="----"/>
 		</TableRow>
 	</TableLayout>
-</merge>
+</LinearLayout>
