--- a/app/src/main/res/menu/options_mainmenu.xml
+++ b/app/src/main/res/menu/options_mainmenu.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
-xmlns:android="http://schemas.android.com/apk/res/android">
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto">
 	<item
+	app:showAsAction="ifRoom"
 	android:id="@+id/logout"
+	android:icon="@android:drawable/ic_lock_idle_lock"
 	android:title="Logout" />
 </menu>
