--- a/app/src/main/res/menu/options_game_local.xml
+++ b/app/src/main/res/menu/options_game_local.xml
@@ -8,6 +8,6 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:id="@+id/cpu_time"
 	android:title="Set CPU Time"/>
 	<item
-	android:id="@+id/local_details"
+	android:id="@+id/game_details"
 	android:title="Game Details"/>
 </menu>
