--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android">
-	<include
-	layout="@layout/include_genesisbar"
-	style="@style/BlueBar"/>
-	<ListView
-	android:id="@android:id/list"
-	style="@style/FillWidth"
-	android:layout_below="@id/topbar_genesis"
-	android:layout_above="@id/botbar"/>
-	<include
-	layout="@layout/include_botbar"
-	android:layout_width="match_parent"
-	android:layout_height="50dp"
-	android:layout_alignParentBottom="true"/>
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:Toolbar="http://schemas.android.com/apk/res-auto"
+	android:layout_height="match_parent"
+	android:layout_width="match_parent">
+	<android.support.v7.widget.Toolbar
+		android:id="@+id/main_toolbar"
+		Toolbar:title="Settings"
+		Toolbar:titleTextColor="@color/white"
+		Toolbar:logo="@drawable/genesischess"
+		android:layout_width="match_parent"
+		android:layout_height="?android:attr/actionBarSize"
+		android:background="@color/blue_800"
+		android:elevation="8dp"/>
+	<FrameLayout
+		android:id="@+id/fragment01"
+		android:layout_below="@+id/main_toolbar"/>
 </RelativeLayout>
