--- a/app/src/main/res/layout/dialog_cputime.xml
+++ b/app/src/main/res/layout/dialog_cputime.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge
-xmlns:android="http://schemas.android.com/apk/res/android">
+<RelativeLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:padding="16dp">
 	<TextView
 	android:id="@+id/layout01"
 	android:textColor="#000000"
@@ -21,4 +22,4 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		android:gravity="center"
 		android:text="Seconds"/>
 	</TableRow>
-</merge>
+</RelativeLayout>
