--- a/app/src/main/res/layout/dialog_gamedetails_local.xml
+++ b/app/src/main/res/layout/dialog_gamedetails_local.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
 xmlns:android="http://schemas.android.com/apk/res/android"
+android:padding="16dp"
 android:layout_height="225dp">
 <LinearLayout
 android:orientation="vertical">
@@ -63,6 +64,8 @@ android:orientation="vertical">
 	android:textColor="#000000"/>
 	<TextView
 	android:id="@+id/zfen"
+	android:paddingBottom="12dp"
+	android:typeface="monospace"
 	android:textColor="#000000"/>
 	<TextView
 	android:textStyle="bold"
@@ -70,6 +73,7 @@ android:orientation="vertical">
 	android:textColor="#000000"/>
 	<TextView
 	android:id="@+id/history"
+	android:typeface="monospace"
 	android:textColor="#000000"/>
 </LinearLayout>
 </ScrollView>
