--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -34,10 +34,10 @@
 			panel:height_policy="exact_child"
 			panel:sizes="1/11"/>
 	</LinearLayout>
-	<include
+	<android.support.v7.widget.Toolbar
 		android:id="@+id/board_nav"
-		layout="@layout/include_board_nav"
 		android:layout_width="match_parent"
-		android:layout_height="50dp"
+		android:layout_height="?android:attr/actionBarSize"
+		android:background="@color/blue_800"
 		android:layout_alignParentBottom="true"/>
 </RelativeLayout>
