move sign up button to left of login button

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -49,10 +49,10 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:id="@+id/register"
 	android:layout_width="110dp"
 	android:layout_height="40dp"
-	android:layout_alignParentBottom="true"
-	android:layout_alignRight="@id/password"
-	android:layout_marginRight="2dp"
-	android:layout_marginBottom="8dp"
+	android:layout_below="@id/password"
+	android:layout_alignLeft="@id/password"
+	android:layout_marginLeft="2dp"
+	android:layout_marginTop="4dp"
 	android:text="Sign Up"
 	android:textSize="14sp"
 	android:textColor="#fff"
