expand fragment01 to fill height -- fixes gamelist with no games

--- a/app/src/main/res/layout/activity_abstract_phone.xml
+++ b/app/src/main/res/layout/activity_abstract_phone.xml
@@ -11,5 +11,6 @@ android:layout_width="match_parent">
 	android:elevation="8dp"/>
 	<FrameLayout
 	android:id="@+id/fragment01"
+	android:layout_height="match_parent"
 	android:layout_below="@+id/main_toolbar"/>
 </RelativeLayout>
